package Client;

import java.io.*;

/**
 * This module contains the presentaton logic of an Echo Client.
 * @author M. L. Liu
 */
public class TMPClient {

   public static void main(String[] args) throws IOException {
   ClientGUI gui = new ClientGUI();

   }
}

